SKN-125 modify endpoint to save campaigns, types, adsets
